--- a/app/src/main/res/layout/activity_calandar.xml
+++ b/app/src/main/res/layout/activity_calandar.xml
@@ -62,166 +62,47 @@
             </LinearLayout>
         </com.google.android.material.card.MaterialCardView>
     </LinearLayout>
-    <LinearLayout
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/toolbar_calandaractivity"
-        android:orientation="vertical"
-        android:gravity="center">
-        <RelativeLayout
-            android:layout_marginTop="40dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
-         <include
-             layout="@layout/bg_calcander_view"/>
-            <RelativeLayout
-                android:layout_width="333dp"
-                android:layout_height="230dp">
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="48dp"
-                    android:orientation="horizontal"
-                    android:gravity="left">
-
-                    <TextView
-                        android:id="@+id/txtMonth"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:fontFamily="@font/inter_bold"
-                        android:textSize="20sp"
-                        android:text="November"
-                        android:textColor="@color/Fresh_Guacamole_03"
-                        android:layout_marginTop="10dp"
-                        android:layout_marginLeft="20dp"/>
-                    <TextView
-                        android:id="@+id/txtYear"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:fontFamily="@font/inter_medium"
-                        android:textSize="11sp"
-                        android:text="2022"
-                        android:textColor="@color/Fresh_Guacamole_03"
-                        android:layout_marginTop="10dp"
-                        android:layout_marginLeft="5dp"/>
-                </LinearLayout>
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="48dp"
-                    android:orientation="horizontal"
-                    android:gravity="right">
-                    <androidx.cardview.widget.CardView
-                        android:id="@+id/cvBtnToday"
-                        android:layout_width="62dp"
-                        android:layout_height="20.38dp"
-                        app:cardBackgroundColor="@color/Fresh_Guacamole_04"
-                        app:cardCornerRadius="30dp"
-                        app:cardElevation="0dp"
-                        android:layout_marginTop="20dp"
-                        android:layout_marginRight="20dp">
-                      <LinearLayout
-                          android:layout_width="match_parent"
-                          android:layout_height="match_parent"
-                          android:orientation="vertical"
-                          android:gravity="center">
-                          <TextView
-                              android:layout_width="wrap_content"
-                              android:layout_height="wrap_content"
-                              android:fontFamily="@font/inter_medium"
-                              android:textSize="11sp"
-                              android:textColor="@color/white"
-                              android:text="Today"
-                              android:gravity="center"/>
-                      </LinearLayout>
-                    </androidx.cardview.widget.CardView>
-                </LinearLayout>
+        android:layout_height="match_parent">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="@dimen/toolbar_calandaractivity"
+            android:orientation="vertical"
+            android:gravity="center">
+            <com.project.diary.Model.Calendar.MyMaterialCalendarView
+                xmlns:app="http://schemas.android.com/apk/res-auto"
+                android:id="@+id/calendarView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:mcv_showOtherDates="all"
+                app:mcv_selectionColor="@color/Fresh_Guacamole_04"
+                />
+            <androidx.cardview.widget.CardView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@color/Fresh_Guacamole_05"
+                app:cardElevation="10dp"
+                android:orientation="vertical">
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_marginTop="48dp"
                     android:orientation="vertical">
-                    <LinearLayout
-                        android:layout_width="match_parent"
+                    <TextView
+                        android:id="@+id/txtSelectedDate"
+                        android:layout_margin="10dp"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:orientation="horizontal">
-                        <TextView
-                            android:layout_width="0dp"
-                            android:layout_weight="1"
-                            android:layout_height="wrap_content"
-                            android:fontFamily="@font/inter_bold"
-                            android:textSize="11sp"
-                            android:textColor="@color/Fresh_Guacamole_04"
-                            android:textAlignment="center"
-                            android:text="SUN"/>
-                        <TextView
-                            android:layout_width="0dp"
-                            android:layout_weight="1"
-                            android:layout_height="wrap_content"
-                            android:fontFamily="@font/inter_bold"
-                            android:textSize="11sp"
-                            android:textColor="#33000000"
-                            android:textAlignment="center"
-                            android:text="MON"/>
-                        <TextView
-                            android:layout_width="0dp"
-                            android:layout_weight="1"
-                            android:layout_height="wrap_content"
-                            android:fontFamily="@font/inter_bold"
-                            android:textSize="11sp"
-                            android:textColor="#33000000"
-                            android:textAlignment="center"
-                            android:text="TUE"/>
-                        <TextView
-                            android:layout_width="0dp"
-                            android:layout_weight="1"
-                            android:layout_height="wrap_content"
-                            android:fontFamily="@font/inter_bold"
-                            android:textSize="11sp"
-                            android:textColor="#33000000"
-                            android:textAlignment="center"
-                            android:text="WED"/>
-                        <TextView
-                            android:layout_width="0dp"
-                            android:layout_weight="1"
-                            android:layout_height="wrap_content"
-                            android:fontFamily="@font/inter_bold"
-                            android:textSize="11sp"
-                            android:textColor="#33000000"
-                            android:textAlignment="center"
-                            android:text="THU"/>
-                        <TextView
-                            android:layout_width="0dp"
-                            android:layout_weight="1"
-                            android:layout_height="wrap_content"
-                            android:fontFamily="@font/inter_bold"
-                            android:textSize="11sp"
-                            android:textColor="#33000000"
-                            android:textAlignment="center"
-                            android:text="FRI"/>
-                        <TextView
-                            android:layout_width="0dp"
-                            android:layout_weight="1"
-                            android:layout_height="wrap_content"
-                            android:fontFamily="@font/inter_bold"
-                            android:textSize="11sp"
-                            android:textColor="@color/Fresh_Guacamole_04"
-                            android:textAlignment="center"
-                            android:text="SAT"/>
-                    </LinearLayout>
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:orientation="vertical">
-                      <androidx.viewpager.widget.ViewPager
-                          android:id="@+id/vpCalendar"
-                          android:layout_width="match_parent"
-                          android:layout_height="match_parent"/>
-                    </LinearLayout>
+                        android:textSize="15sp"
+                        android:text="November 2022"
+                        android:fontFamily="@font/inter_medium"
+                        android:textColor="@color/Fresh_Guacamole_01"/>
                 </LinearLayout>
+            </androidx.cardview.widget.CardView>
+        </LinearLayout>
+    </ScrollView>
 
-            </RelativeLayout>
-        </RelativeLayout>
-
-    </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
