--- a/app/src/main/res/menu/menu_navdrawer_mainactivity.xml
+++ b/app/src/main/res/menu/menu_navdrawer_mainactivity.xml
@@ -19,6 +19,7 @@
             android:icon="@drawable/icon_lock_strock_navdrawer"
             android:title="Lock Diary"/>
         <item
+            android:id="@+id/menu_item_backuprestore"
             android:icon="@drawable/icon_backup_strock_navdrawer"
             android:title="Backup restore"/>
         <item
